--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Courgette', cursive;
+}
+
 header{
     width: auto;
     height: 180px;
@@ -6,6 +10,11 @@ header{
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
+}
+
+a {
+    width: 100%;
+    height: 100%;
 }
 
 #me {
@@ -23,10 +32,61 @@ header{
 h1 {
     text-align: justify;
     padding-left: 250px;   
+    color: whitesmoke;
 }
 
+h2 {
+    color: whitesmoke;
+    text-align: center;
+}
+
+.shadow{
+    text-shadow: 0px 0px 8px black;
+}
 .h1 {
     background-color: rgb(44, 147, 194);
     padding: 8px;
-     
 }
+
+.box{
+    height:400px;
+}
+
+    .parent {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 50%;
+        }
+
+        .entree{
+            width: 50%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+           
+        }
+        
+        .entree:hover{
+            opacity: 0.8;
+            box-shadow: 0px 0px 20px black;
+            text-shadow: 0px 0px 8px black;
+        }
+
+        .div1 { 
+            grid-area: 1 / 2 / 2 / 4; 
+            background-color: darkred;
+        }
+        .div2 { 
+            grid-area: 1 / 4 / 2 / 6; 
+            background-color: darkgreen;
+        }
+        .div3 { 
+            grid-area: 2 / 2 / 3 / 4; 
+            background-color: darkgoldenrod;
+        }
+        .div4 { 
+            grid-area: 2 / 4 / 3 / 6; 
+            background-color: brown;
+        }
