--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     font-family: 'Courgette', cursive;
+    background-color: rgb(44, 147, 194, 0.3);
+
 }
 
 header{
@@ -40,6 +42,17 @@ h2 {
     text-align: center;
 }
 
+h3 {
+    color: whitesmoke;
+    text-align: center;
+}
+
+h4 {
+    font-size: 120%;
+}
+a:link {
+    text-decoration: none;
+}
 .shadow{
     text-shadow: 0px 0px 8px black;
 }
@@ -48,45 +61,58 @@ h2 {
     padding: 8px;
 }
 
-.box{
-    height:400px;
+.parent {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 50%;
+    }
+
+    .entree{
+        width: 50%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+    }
+    
+    .entree:hover{
+        opacity: 0.8;
+        box-shadow: 0px 0px 20px black;
+        text-shadow: 0px 0px 8px black;
+    }
+
+    .div1 { 
+        background-color: darkred;
+    }
+    .div2 { 
+        background-color: darkgreen;
+    }
+    .div3 { 
+        background-color: darkgoldenrod;
+    }
+    .div4 { 
+        background-color: brown;
+    }
+
+    .div5 {
+        background-color: darkblue;
+    }
+
+.content {
+    width: 400px;
+    height: auto;
+    display: block;
+    margin: auto;
+    border: 1px solid black;
+    box-shadow: 0px 0px 20px black;
+    padding: 0px 10px;
+    background-color: white;
+    margin-top: 20px; 
 }
 
-    .parent {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        height: 50%;
-        }
-
-        .entree{
-            width: 50%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-           
-        }
-        
-        .entree:hover{
-            opacity: 0.8;
-            box-shadow: 0px 0px 20px black;
-            text-shadow: 0px 0px 8px black;
-        }
-
-        .div1 { 
-            grid-area: 1 / 2 / 2 / 4; 
-            background-color: darkred;
-        }
-        .div2 { 
-            grid-area: 1 / 4 / 2 / 6; 
-            background-color: darkgreen;
-        }
-        .div3 { 
-            grid-area: 2 / 2 / 3 / 4; 
-            background-color: darkgoldenrod;
-        }
-        .div4 { 
-            grid-area: 2 / 4 / 3 / 6; 
-            background-color: brown;
-        }
+.dat {
+    text-align: right;
+    font-size: 80%;
+}
