--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ a:link {
     border: 1px solid black;
     box-shadow: 0px 0px 20px black;
     padding: 0px 10px;
-    background-color: white;
+    background-color: aliceblue;
     margin-top: 20px; 
 }
 
